# miterm-Burak-Ozdemir

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
Docer/: Build  file  storage
docs/: kullanim-kilavuzu.md
miterm-Burak-Ozdemir-main/: Dockerfile  README.md  phishing_demo.html
miterm-Burak-Ozdemir-main/docs/: README.md
miterm-Burak-Ozdemir-main/src/: main.rs
miterm-Burak-Ozdemir-main/src/modules/: dirbrute.rs  dns.rs  header.rs  scanner.rs
src/: main.rs
src/modules/: dirbrute.rs  dns.rs  header.rs  scanner.rs
