[package]
name = "pentester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
clap = { version = "4", features = ["derive"] }
hickory-resolver = "0.24"
futures = "0.3"
anyhow = "1.0"
colored = "2.1"
